fixed alignment issues, text for project cards

--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@ html {
     box-sizing: border-box;
 }
 
-.container         {
+body {
     height: 100vh;
+    width: 100vw;
+}
+.container         {
     display:grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 4fr;
@@ -18,14 +21,15 @@ html {
 .icons {
     width:2em;
     margin-left: 2em;
-    margin-right: 1em;
-    vertical-align:text-bottom;
-    
+    margin-right: 2em;
+    padding-top: 10px;
+    vertical-align: -9px;
 }
 
 #top-icon {
     margin-top: 3em;
 }
+
 .magnify {
     width:2em;
 }
@@ -43,6 +47,16 @@ html {
     color: white;
     font-weight: bolder;
     grid-row: 1 / 3;
+}
+
+.top-sidebar {
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    
+}
+
+.top-sidebar p {
+    font-size: 1.7em;
 }
 
 .header {
@@ -102,9 +116,9 @@ button:hover{
 #searchbar {
     border: 1px solid grey;
     border-radius: 10px;
-    height: 25px;
+    height: 30px;
     margin-left: 2em;
-    width: 80%;
+    width: 90%;
     padding: 2px 23px 2px 30px;
     outline: 0;
     background-color: #f5f5f5;
@@ -112,7 +126,7 @@ button:hover{
   
 .images {
     max-width: 5em;
-    border: 2px solid #007FFF;
+    border: 10px double #007FFF;
     border-radius: 50%;
     margin-right: 1em;
 }
@@ -187,12 +201,8 @@ ul {
     list-style-type: none;
     padding: 0;
     text-indent: 0;
-
 }
 
-li {
-
-}
 
 .updates > li::after {
     content: '';
